# RTSCortex

./: .gitignore  .gitmodules  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
configs/experiments/: full_runtime.yaml  live_2s3z.yaml  live_2s3z_qwen3_8b.yaml  live_pvz.yaml  live_simple64.yaml  (+30 more)
docs/: evaluation.md  live-console.md  live-runtime.md  policy-comparison.md
integrations/llm_pysc2/: README.md  pyproject.toml
integrations/llm_pysc2/patches/: 0001-return-noop-while-awaiting-runtime.patch  0002-pass-random-seed-to-sc2env.patch  0003-fix-build-feature-plane-coordinate-order.patch  0004-expose-structured-translation-results.patch  0005-fix-near-base-placement.patch  0006-report-pretranslation-action-aborts.patch  0007-preserve-transient-team-units.patch  0008-enforce-nexus-resource-clearance.patch  0009-use-exact-nexus-screen-scale.patch  0010-report-max-frame-truncation.patch  0011-allocate-log-directories-atomically.patch  0012-bind-gas-rebalance-to-worker-management.patch  0013-preserve-reserved-builder-worker.patch  0014-refresh-worker-workplaces.patch  0015-observation-gap-watchdog.patch  0016-accept-visible-team-unit.patch  0017-return-camera-settlement-noop.patch  0018-use-exact-single-unit-selection.patch  0019-bypass-actor-selection-for-transport-noop.patch  0020-validate-gather-screen-target.patch  README.md
integrations/llm_pysc2/src/rtscortex_llm_pysc2/: __init__.py  __main__.py  ability.py  addon.py  addon_effect_verifier.py  broker.py  clock.py  combat_effect_verifier.py  coordinator.py  effect_types.py  effect_verifier.py  entrypoint.py  execution.py  extractor.py  frame_stream.py  hook.py  inject_effect_verifier.py  melee.py  morph.py  morph_effect_verifier.py  mule_effect_verifier.py  observation.py  production.py  production_effect_verifier.py  protocol.py  research.py  research_effect_verifier.py  routing.py  terran_melee.py  worker.py  zerg_melee.py
integrations/llm_pysc2/tests/: python39_contract_smoke.py  test_frame_stream.py
scripts/: run_protoss_frozen_natural_terminal.sh
tests/: __init__.py  conftest.py  helpers.py
(+221 files in other folders)
