[project]
name = "rtscortex"
version = "0.1.0"
description = "A hierarchical real-time LLM agent runtime for StarCraft II"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0,<7",
  "typer>=0.16,<1",
  "uvicorn>=0.35,<1",
  "websockets>=15,<17",
]

[project.scripts]
rtscortex = "rtscortex.cli.app:app"

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "ruff>=0.12,<1",
  "types-pyyaml>=6.0.12,<7",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtscortex"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["third_party"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"integrations/llm_pysc2/**/*.py" = ["UP006", "UP017", "UP045"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["integrations/llm_pysc2/src"]
files = ["src", "tests", "integrations/llm_pysc2/src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
