[project]
name = "rtscortex-llm-pysc2"
version = "0.1.0"
description = "LLM-PySC2 environment-worker bridge for RTSCortex"
requires-python = ">=3.9,<3.11"
dependencies = ["httpx>=0.27,<1"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtscortex_llm_pysc2"]
